# Durov

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/durov/: __main__.py
src/durov/app/dto/: base.py  user.py
src/durov/app/exceptions/: base.py  user.py
src/durov/app/models/: base.py  user.py
src/durov/app/repos/: user.py
src/durov/app/services/: user.py
src/durov/infra/: config.py  settings.py
src/durov/infra/adapters/repos/: base.py  user.py
src/durov/infra/adapters/services/: user.py
src/durov/infra/db/: models.py
src/durov/presentation/api/: app_builder.py  boot.py
src/durov/presentation/api/dependencies/: common.py  user.py
src/durov/presentation/api/routers/: user.py
src/durov/presentation/api/schemas/: base.py  user.py
tests/: conftest.py
tests/e2e/: test_user.py
