[tool.poetry]
name = "durov"
version = "0.1.0"
description = ""
authors = ["Ilyas Kalandar <ilyas_kalandar@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
sqlalchemy = "^2.0.32"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
uvicorn = "^0.30.6"
aiomysql = "^0.2.0"
greenlet = "^3.0.3"
uvloop = "^0.20.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
packages = [{ include = "durov", from = "src" }]

